[gd_scene load_steps=4 format=3 uid="uid://cqqfwto1p1gtx"]

[ext_resource type="Script" path="res://save_scnee.gd" id="1_gn02i"]
[ext_resource type="Texture2D" uid="uid://bj6u4lgjc0ev7" path="res://icon.svg" id="2_7f8kb"]
[ext_resource type="PackedScene" uid="uid://c41g6h16whgw7" path="res://enemy.tscn" id="3_1brg1"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_gn02i")
gravity = 3

[node name="Button" type="Button" parent="."]
offset_left = 702.0
offset_top = 60.0
offset_right = 891.0
offset_bottom = 97.0
text = "1"

[node name="Button2" type="Button" parent="."]
offset_left = 704.0
offset_top = 103.0
offset_right = 892.0
offset_bottom = 151.0
text = "-1
"

[node name="Label" type="Label" parent="."]
offset_left = 497.0
offset_top = 8.0
offset_right = 686.0
offset_bottom = 88.0
text = "text:here"

[node name="Button3" type="Button" parent="."]
offset_left = 216.0
offset_top = 50.0
offset_right = 298.0
offset_bottom = 81.0
text = "save data
"

[node name="Button4" type="Button" parent="."]
offset_left = 308.0
offset_top = 48.0
offset_right = 390.0
offset_bottom = 79.0
text = "load data
"

[node name="player" type="Sprite2D" parent="."]
position = Vector2(108, 81)
texture = ExtResource("2_7f8kb")

[node name="CharacterBody2D" parent="." instance=ExtResource("3_1brg1")]
position = Vector2(608, 288)

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
